# hap-auto-maker

./: .env.example  .gitignore  AGENTS.md  BUG.md  CLAUDE.md  DECISIONS.md  FIXPLAN-views-workflow-pages.md  HANDOFF.md  LESSONS.md  README-QUICKSTART.md  README.md  RUNBOOK.md  hap_auto_overview.html  hap_auto_presentation.html  hap_help_center_doc.md  make_app.py  plan.md  pyproject.toml  requirements.txt  run_app_pipeline.py  setup.py  test_discovery.py  todo.md
.claude/: settings.local.json
action/: 创建新增记录节点.har
archive/: HANDOFF_v3_refactor_and_validation.md  PLAN_v1_planners_integration.md  PLAN_v2_engineering_improvements.md  TODO_v1_incremental_ops.md
bug/: tech_log(2).json
config/: gemini_rpd_usage.json
docs/: api_recording_tasks.md  app_plan_spec.md  app_role_pipeline.md  creation-report-2026-03-21-20plus-5.md  pipeline-visual.html  stability-report-2026-03-21-20plus-extra-2.md  stability-report-2026-03-21-extra-5.md  stability-report-2026-03-21.md  workflow_reference.md
examples/: minimal_requirements.txt
memory/: MEMORY.md  project_incremental_ops.md
plans/: ai_model_tier_refactor.md
scripts/: README.md  add_new_record_node.py  agent_collect_requirements.py  analyze_relation_consistency.py  apply_mock_relations_from_plan.py  apply_relation_repair_plan.py  apply_tableview_filters_from_plan.py  apply_worksheet_layout.py  bootstrap.sh  capture_field_params.py  clear_app_records.py  create_app.py  create_chatbots_from_plan.py  create_demo_workflow_full.py  create_roles_from_recommendation.py  create_views_from_plan.py  delete_app.py  pipeline.py  (+60 more)
(+296 files in other folders)
